@@ -2,6 +2,8 @@
 v6.1.3-git
 ----------
 
+[mms] Fix some cases where the seesion was not destroyed upon authentication
+      errors.
 [mms] Fix uploading attachments on Firefox 22+ in dynamic view.
 [mms] Fix image upload dialog in the HTML compose editor.
 [mms] Fix purging search previews from browser cache when switching mailboxes
